<resources>
    <string name="app_name">ChordGalore</string>

    <string name="open_drawer">Open navigation menu</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_name">Nombre Completo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_confirm">Confirmar Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"¡Bienvenido!"</string>

    <string name="invalid_username">Nombre de usuario no es valido</string>
    <string name="invalid_usermail">Correo no valido</string>
    <string name="invalid_password_short">La contraseña tiene que contener más de 7 caracteres</string>
    <string name="invalid_password_content">La contraseña tiene que contener un Numero, una Mayuscula y una letra</string>
    <string name="invalid_passconfirm">Las contraseñas no coinciden</string>
    <string name="login_failed">"El inicio de sesión ha fallado"</string>
    <string name="register_failed">"El registro ha fallado"</string>

    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_new_song">Nueva Cancion</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_register">Registro</string>
</resources>
